syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "LeafletAlarmsGrpc";

package integro;

service IntegroService {
  rpc GenerateObjectId (GenerateObjectIdRequest) returns (GenerateObjectIdResponse);
  rpc UpdateIntegro (IntegroListProto) returns (google.protobuf.BoolValue);
  rpc GetListByType (GetListByTypeRequest) returns (IntegroListProto);   
}

message IntegroProto{
  string object_id = 1;
  string i_name = 2;
  string i_type = 3;
}

message IntegroListProto {
  repeated IntegroProto objects = 1;
}

message GenerateObjectIdData {
  string input = 1;
  string version = 2;
  string object_id = 3;
}

message GenerateObjectIdRequest {
  repeated GenerateObjectIdData input = 1;
}

message GenerateObjectIdResponse {
  repeated GenerateObjectIdData output = 1;
}

message GetListByTypeRequest {
  string i_name = 1;
  string i_type = 2;
}

